--- a/src/components/TimeZoneCard/TimeZoneCard.css
+++ b/src/components/TimeZoneCard/TimeZoneCard.css
@@ -13,18 +13,25 @@
 }
 
 .card-img img {
-    height: 70px;
-    width: 110px;
+    height: 60px;
+    width: 100px;
     object-fit: cover;
     border-radius: 10px;
 }
 
 .card-body h3 {
     color: var(--dark-text-primary);
+    font-family: var(--font-text-primary);
+    font-weight: 500;
+    font-size: 1em;
+    margin-bottom: 3px;
 }
 
 .card-body h4 {
     color: var(--dark-text-secondary);
+    font-family: var(--font-text-primary);
+    font-weight: 400;
+    font-size: 0.9em;
 }
 
 .card-body {
