--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,6 @@
   --dark-primary: rgb(4, 0, 20);
   --dark-secondary: rgb(40, 35, 59);
   --dark-text-primary: rgb(242, 242, 242);
-  --dark-text-secondary: rgb(204, 204, 204);
+  --dark-text-secondary: rgb(140, 140, 140);
+  --font-text-primary: "Roboto", sans-serif;
 }
