--- a/src/components/common/Modal/Modal.css
+++ b/src/components/common/Modal/Modal.css
@@ -14,4 +14,30 @@
     padding: 10px 15px;
     background-color: var(--dark-secondary);
     border-radius: 10px;
+    position: relative;
+}
+
+.modal-close-icon {
+    position: absolute;
+    right: 25px;
+    top: 10px;
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 5px;
+    transition: 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-close-icon:hover {
+    border: 1px solid var(--dark-text-secondary);
+    border-radius: 5px;
+}
+
+.modal-close-icon > svg {
+    fill: var(--dark-text-primary);
+    height: 20px;
 }
