--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,21 +5,28 @@
 
 .margin-container {
     width: 90%;
+    /* min-height: 100vh; */
     margin: auto;
     padding: 5px 0px;
 }
 
 .timezone-card-grid {
     display: flex;
-    /* grid-template-columns: 1fr; */
     gap: 10px;
     flex-direction: column;
+    flex-basis: 40%;
+    margin-top: 40px;
+}
+
+.world-time-section {
+    flex-basis: 60%;
 }
 
 #main-content {
     display: flex;
     justify-content: space-between;
-    height: 100vh;
+    gap: 20px;
+    height: 90vh;
 }
 
 @media screen and (max-width: 900px) {
