--- a/src/components/specific/TimeZoneCard/TimeZoneCard.css
+++ b/src/components/specific/TimeZoneCard/TimeZoneCard.css
@@ -22,7 +22,21 @@
 
 .timezonecard-body {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
+}
+
+.flex-direction-row {
+    flex-direction: row;
+}
+
+.flex-direction-column {
+    flex-direction: column;
+}
+
+.text-align-center {
+    text-align: center;
 }
