Add disable option to buttons

--- a/src/components/common/Button/Button.css
+++ b/src/components/common/Button/Button.css
@@ -42,3 +42,7 @@ button:hover {
 .btn-font-light-secondary {
     color: var(--dark-text-secondary);
 }
+
+.btn-disabled {
+    cursor: not-allowed;
+}
